# crud_bootcamp

./: docker-compose.yml  pyproject.toml
backend/: crud.py  router.py  schemas.py
frontend/: .dockerignore
