[tool.poetry]
name = "crud-bootcamp"
version = "0.1.0"
description = ""
authors = ["Bruno Silva <bruno.ogs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.35"
pydantic = {extras = ["email"], version = "^2.9.2"}
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
streamlit = "^1.39.0"
pandas = "^2.2.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
